# resume-feedback-deploy

./: README.md
all-models-app/: docker-compose.yml  run_models.sh
app-1-intro/: __test__.ipynb  docker-compose.yml
app-2-summary/: docker-compose.yml
app-3-skills/: docker-compose.yml
app-4-work_hist/: docker-compose.yml
app-5-conclusion/: docker-compose.yml
app-6-passive/: docker-compose.yml  run_models.sh
app-main/: Dockerfile  app.py  config.py  main.py  pyproject.toml  templates.yaml
app-main/src/: models.py  postprocess.py  run.py  utils.py
